package creational.prototype;

/**
 * Padrão de protótipo recomendado no Java com contrato de interface com um método para clonar objetos.
 *
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 14/12/2021
 */
public interface Prototype {

	Object copy();
}
